--- a/DiceGamewithTwoplayer/app/src/main/res/layout/activity_main.xml
+++ b/DiceGamewithTwoplayer/app/src/main/res/layout/activity_main.xml
@@ -1,51 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
+    >
+    <data>
+        <variable
+            name="n"
+            type="com.example.dicegamewithtwoplayer.MyData" />
+    </data>
+<LinearLayout
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:gravity="center"
+android:orientation="vertical"
+tools:context=".MainActivity">
+<TextView
+    android:id="@+id/result"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textColor="@color/colorPrimary"
+    android:textSize="30sp"
+    tools:text="Result" />
+
+<LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    tools:context=".MainActivity">
-   <TextView
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:textSize="30sp"
-       tools:text="Result"
-       android:id="@+id/result"
-       android:textColor="@color/colorPrimary"
-       />
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:orientation="horizontal"
-       >
-      <ImageView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          app:srcCompat="@drawable/dice_2"
-          android:id="@+id/pdice1"
-          />
-      <ImageView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          app:srcCompat="@drawable/dice_2"
-          android:id="@+id/pdice2"
-          />
-   </LinearLayout>
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
+    <ImageView
+        android:id="@+id/pdice1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/dice_2" />
+
+    <ImageView
+        android:id="@+id/pdice2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/dice_2" />
+</LinearLayout>
 
 
-   <Button
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:text="Roll"
-       android:onClick="roll"
-       />
-   <Button
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:text="UpCount"
-       android:onClick="upCount"
-       />
+<Button
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:onClick="roll"
+    android:text="Roll" />
+
+<Button
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:onClick="upCount"
+    android:text="UpCount" />
 
 </LinearLayout>
+</layout>
